--- a/src/pages/post/[id].astro
+++ b/src/pages/post/[id].astro
@@ -1,18 +1,18 @@
 ---
-import '../styles/pages/[about, contact].scss'
-import '../styles/pages/post.scss'
+// import '../styles/pages/[about, contact].scss'
+// import '../styles/pages/post.scss'
 
-import Layout from '../layouts/Layout.astro'
+// import Layout from '../layouts/Layout.astro'
 
-export function getStaticPaths() {
-    return [
-        // {params: {id: 'hello-world'}}, 
-        // {params: {id: 'nodebooks'}}, 
-        // {params: {id: 'some-old-templates-that-i-found'}}, 
-    ];
-}
+// export function getStaticPaths() {
+//     return [
+//         // {params: {id: 'hello-world'}}, 
+//         // {params: {id: 'nodebooks'}}, 
+//         // {params: {id: 'some-old-templates-that-i-found'}}, 
+//     ];
+// }
 
-const { id } = Astro.params;
+// const { id } = Astro.params;
 
 // import authors from '../../blog/authors.js'
 
