--- a/src/pages/post/[id].astro
+++ b/src/pages/post/[id].astro
@@ -4,13 +4,13 @@
 
 // import Layout from '../layouts/Layout.astro'
 
-// export function getStaticPaths() {
+export function getStaticPaths() {
 //     return [
 //         // {params: {id: 'hello-world'}}, 
 //         // {params: {id: 'nodebooks'}}, 
 //         // {params: {id: 'some-old-templates-that-i-found'}}, 
 //     ];
-// }
+}
 
 // const { id } = Astro.params;
 
