--- a/src/pages/post/[id].astro
+++ b/src/pages/post/[id].astro
@@ -5,11 +5,11 @@
 // import Layout from '../layouts/Layout.astro'
 
 export function getStaticPaths() {
-//     return [
+    return [
 //         // {params: {id: 'hello-world'}}, 
 //         // {params: {id: 'nodebooks'}}, 
 //         // {params: {id: 'some-old-templates-that-i-found'}}, 
-//     ];
+    ];
 }
 
 // const { id } = Astro.params;
