--- a/src/pages/post/[id].astro
+++ b/src/pages/post/[id].astro
@@ -1,8 +1,8 @@
 ---
-// import '../styles/pages/[about, contact].scss'
-// import '../styles/pages/post.scss'
+import '../styles/pages/[about, contact].scss'
+import '../styles/pages/post.scss'
 
-// import Layout from '../layouts/Layout.astro'
+import Layout from '../layouts/Layout.astro'
 
 export function getStaticPaths() {
     return [
