--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -19,6 +19,8 @@ var posts = await Astro.glob('../../blog/posts/*.md')
   <SiteGridContent classItems="posts">
     {
       posts.map(function(post, i) {
+        var repoName = 'AdarshRKumar.dev'
+
         var slug = post.file
         var sw = `/home/runner/${repoName}/${repoName}/blog/posts/`
         if (slug.startsWith(sw)) slug = slub.slice(sw.length)
