--- a/src/pages/post/[id].astro
+++ b/src/pages/post/[id].astro
@@ -2,25 +2,25 @@
 import '../styles/pages/[about, contact].scss'
 import '../styles/pages/post.scss'
 
-import Layout from '../layouts/Layout.astro'
+// import Layout from '../layouts/Layout.astro'
 
 export function getStaticPaths() {
     return [
-//         // {params: {id: 'hello-world'}}, 
-//         // {params: {id: 'nodebooks'}}, 
-//         // {params: {id: 'some-old-templates-that-i-found'}}, 
+        {params: {id: 'hello-world'}}, 
+        {params: {id: 'nodebooks'}}, 
+        {params: {id: 'some-old-templates-that-i-found'}}, 
     ];
 }
 
-// const { id } = Astro.params;
+const { id } = Astro.params;
 
-// import authors from '../../blog/authors.js'
+import authors from '../../blog/authors.js'
 
-// var posts = await Astro.glob('../../blog/posts/*.md')
-// var post = posts.find(post => post.file.includes(id))
+var posts = await Astro.glob('../../blog/posts/*.md')
+var post = posts.find(post => post.file.includes(id))
 
-// var author = post.frontmatter.author
-// author = authors[author]
+var author = post.frontmatter.author
+author = authors[author]
 
 ---
 <!-- <Layout title={`${post.frontmatter.title} | Blog`} pageType="post" classItems="ignorePadding">
