--- a/src/pages/post/[id].astro
+++ b/src/pages/post/[id].astro
@@ -12,15 +12,15 @@ export function getStaticPaths() {
     ];
 }
 
-const { id } = Astro.params;
+// const { id } = Astro.params;
 
-import authors from '../../blog/authors.js'
+// import authors from '../../blog/authors.js'
 
-var posts = await Astro.glob('../../blog/posts/*.md')
-var post = posts.find(post => post.file.includes(id))
+// var posts = await Astro.glob('../../blog/posts/*.md')
+// var post = posts.find(post => post.file.includes(id))
 
-var author = post.frontmatter.author
-author = authors[author]
+// var author = post.frontmatter.author
+// author = authors[author]
 
 ---
 <!-- <Layout title={`${post.frontmatter.title} | Blog`} pageType="post" classItems="ignorePadding">
