--- a/src/pages/post/[id].astro
+++ b/src/pages/post/[id].astro
@@ -1,6 +1,6 @@
 ---
-import '../styles/pages/[about, contact].scss'
-import '../styles/pages/post.scss'
+// import '../styles/pages/[about, contact].scss'
+// import '../styles/pages/post.scss'
 
 // import Layout from '../layouts/Layout.astro'
 
