--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -22,7 +22,7 @@ var posts = await Astro.glob('../../blog/posts/*.md')
         var repoName = 'AdarshRKumar.dev'
 
         var slug = post.file
-        var sw = `/home/runner/${repoName}/${repoName}/blog/posts/`
+        var sw = `/home/runner/work/${repoName}/${repoName}/blog/posts/`
         if (slug.startsWith(sw)) slug = slub.slice(sw.length)
         if (slug.endsWith('.md')) slug = slug.slice(0, -1*'.md'.length)
 
