--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -23,7 +23,7 @@ var posts = await Astro.glob('../../blog/posts/*.md')
 
         var slug = post.file
         var sw = `/home/runner/work/${repoName}/${repoName}/blog/posts/`
-        if (slug.startsWith(sw)) slug = slub.slice(sw.length)
+        if (slug.startsWith(sw)) slug = slug.slice(sw.length)
         if (slug.endsWith('.md')) slug = slug.slice(0, -1*'.md'.length)
 
         var image = {}
