--- a/src/pages/post/[id].astro
+++ b/src/pages/post/[id].astro
@@ -2,7 +2,7 @@
 import '../styles/pages/[about, contact].scss'
 import '../styles/pages/post.scss'
 
-import Layout from '../layouts/Layout.astro'
+// import Layout from '../layouts/Layout.astro'
 
 export function getStaticPaths() {
     return [
