--- a/src/pages/post/[id].astro
+++ b/src/pages/post/[id].astro
@@ -23,7 +23,7 @@ var author = post.frontmatter.author
 author = authors[author]
 
 ---
-<!-- <Layout title={`${post.frontmatter.title} | Blog`} pageType="post" classItems="ignorePadding">
+<Layout title={`${post.frontmatter.title} | Blog`} pageType="post" classItems="ignorePadding">
     <section class="info">
         <a href=`/authorPage?id=${author.id}` class="author">{author.displayName}</a> | <span class="date">{post.frontmatter.date}</span>
     </section>
@@ -31,4 +31,4 @@ author = authors[author]
         <div class="scroll-percentage"></div>
         <article class="post-content" set:html={post.compiledContent()}></article>
     </section>
-</Layout> -->
+</Layout>
