--- a/src/pages/post/[id].astro
+++ b/src/pages/post/[id].astro
@@ -19,13 +19,14 @@ import authors from '../../../blog/authors.js'
 var posts = await Astro.glob('../../../blog/posts/*.md')
 var post = posts.find(post => post.file.includes(id))
 
-var author = post.frontmatter.author
-author = authors[author]
+var authorUsername = post.frontmatter.author
+var author = authors[author]
+author.username = authorUsername
 
 ---
 <Layout title={`${post.frontmatter.title} | Blog`} pageType="post" classItems="ignorePadding">
     <section class="info">
-        <a href=`/authorPage?id=${author.id}` class="author">{author.displayName}</a> | <span class="date">{post.frontmatter.date}</span>
+        <a href=`/authorPage?id=${author.username}` class="author">{author.displayName}</a> | <span class="date">{post.frontmatter.date}</span>
     </section>
     <section class="post-area">
         <div class="scroll-percentage"></div>
