--- a/src/pages/author/[username].astro
+++ b/src/pages/author/[username].astro
@@ -1,6 +1,6 @@
 ---
-import '../styles/pages/[about, contact].scss'
-import '../styles/pages/author.scss'
+import '../../styles/pages/[about, contact].scss'
+import '../../styles/pages/author.scss'
 
 import Layout from '../layouts/Layout.astro'
 
