--- a/src/pages/author/[username].astro
+++ b/src/pages/author/[username].astro
@@ -2,7 +2,7 @@
 import '../../styles/pages/[about, contact].scss'
 import '../../styles/pages/author.scss'
 
-import Layout from '../layouts/Layout.astro'
+import Layout from '../../layouts/Layout.astro'
 
 export function getStaticPaths() {
     return [
