create and use portfolioHighlights.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,14 +2,21 @@
 import '../styles/components/fullAreaIframe.scss'
 
 import Layout from '../layouts/Layout.astro'
+import SiteGridContent from '../components/SiteGridContent.astro'
 
 import Hero from '../components/hero.astro'
+import PortfolioHighlights from '../components/portfolioHighlights.astro'
+
 ---
 <Layout title="" pageType="home">
     <Hero />
+    <!-- Portfolio Highlights -->
+    <PortfolioHighlights />
     <!-- Featured Articles -->
-    <!-- Portfolio main sublinks here [WebDEV, Coding, Photography] -->
     <!-- Latest Blog Posts -->
+    <!-- Photography Showcase -->
+    <!-- Skills Overview -->
+    <!-- Featured Project -->
     <!-- Tutorials and Resources (If Any) -->
-    <!-- Join the "Community"? -->
+    <!-- Newsletter Signup -->
 </Layout>
