--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,13 +6,13 @@ import SiteGridContent from '../components/SiteGridContent.astro'
 
 import Hero from '../components/hero.astro'
 import PortfolioHighlights from '../components/portfolioHighlights.astro'
+import FeaturedArticles from '../components/featuredArticles.astro'
 
 ---
 <Layout title="" pageType="home">
     <Hero />
-    <!-- Portfolio Highlights -->
     <PortfolioHighlights />
-    <!-- Featured Articles -->
+    <FeaturedArticles />
     <!-- Latest Blog Posts -->
     <!-- Photography Showcase -->
     <!-- Skills Overview -->
