--- a/src/styles/pages/post.scss
+++ b/src/styles/pages/post.scss
@@ -88,6 +88,10 @@ html {
                     margin-bottom: 0;
                 }
             }
+
+            pre.astro-code:has( > code) {
+                padding: 0.25rem;
+            }
         }
     }
 }
