--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -18,17 +18,14 @@ $padding: 1rem;
             grid-template-columns: repeat(#{$i + 2}, minmax(min(0, 100%), 1fr)); /* New Browser (yes "min()")*/
 
             .item {
-                &:first-child:last-child {
-                    grid-column: 2 / -2;
-                }
                 &:first-child:not(:last-child) {
-                    grid-column: 2 / 3;
-                }
-                &:nth-child(2):not(:first-child, :last-child) {
                     grid-column: 2 / 3;
                 }
                 &:last-child:not(:first-child) {
                     grid-column: -3 / -2;
+                }
+                &:first-child:last-child, &:nth-child(2):not(:first-child, :last-child) {
+                    grid-column: 2 / -2;
                 }
             }
         }
