--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -24,8 +24,11 @@ $padding: 1rem;
                 &:last-child:not(:first-child) {
                     grid-column: -3 / -2;
                 }
-                &:first-child:last-child, &:nth-child(2):not(:first-child, :last-child) {
+                &:first-child:last-child {
                     grid-column: 2 / -2;
+                }
+                &:nth-child(2):not(:first-child, :last-child) {
+                    grid-column: 3 / -3;
                 }
             }
         }
