--- a/src/pages/_soon.astro
+++ b/src/pages/_soon.astro
@@ -3,12 +3,7 @@ import '../styles/pages/soon.scss'
 
 import Layout from '../layouts/Layout.astro'
 ---
-<Layout title="Soon" classItems="isSoon">
-  <hr>
-  <h1 id="page-title" style="margin: 0; padding: 0 !important;">Coming Soon</h1>
-  <hr>
-  <br>
-  <!-- ShareThis BEGIN --><div class="sharethis-inline-follow-buttons" style="display: none;"></div><!-- ShareThis END -->
+<Layout title="Coming Soon" classItems="isSoon">
   <p>This site is under development right now, I will put something here soon!</p>
   <p>In the meantime, you can email me at: <a href="mailto:adarshrkumar+site@aol.com">adarshrkumar+site@aol.com</a>.</p>
   <!-- <hr> -->
