--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -14,7 +14,7 @@ var playlists = [
   <section class="music-area">
     {
       playlists.map(p => {
-        <iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src={p}></iframe>
+        return (<iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src={p}></iframe>)
       })
     }
   </section>
