--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -10,7 +10,7 @@ var playlists = [
 ]
 
 ---
-<Layout title="Music Taste" classItems="ignorePadding" inlineStyles="display: grid;">
+<Layout title="Music Taste" inlineStyles="display: grid;">
   <section class="music-area">
     {
       playlists.map(p => {
