--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -34,6 +34,7 @@ projects.push({
     projects.map((category, i) => {
       <SiteGridContent classItems="wrap">
         <h3>{category.name}</h3>
+        { JSON.stringify(category.items) }
         {
           category.items.map((item, i2) => {
             var target = '_blank'
