--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -33,8 +33,8 @@ projects.push({
   {
     projects.map((category, i) => {
       <SiteGridContent classItems="wrap">
+        { JSON.stringify(category) }
         <h3>{category.name}</h3>
-        { JSON.stringify(category.items) }
         {
           category.items.map((item, i2) => {
             var target = '_blank'
