--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -30,7 +30,7 @@ var allProjects = await Astro.glob('../../work/projects/*/*.md')
 <Layout title="Projects">
   {
     projects.map((category, i) => {
-      { <pre set:html={JSON.stringify(category)} /> }
+      // { <pre set:html={JSON.stringify(category)} /> }
       return (
         <SiteGridContent classItems="wrap">
           <h3>{category.name}</h3>
