--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -9,7 +9,7 @@ var categories = [
 var projects = [
   {
     id: 'games', 
-    name: 'Title',
+    name: 'Games',
     items: await Astro.glob('../../work/projects/games/*.md')
   },
   {
