--- a/src/styles/pages/projects.scss
+++ b/src/styles/pages/projects.scss
@@ -1,7 +1,13 @@
-.grid {
-    margin: var(--gap);
+.category__title {
+    text-align: center;
 }
-.project-description {
-    padding: 0.5rem;
-    border: solid 1px gray;
-}
+
+
+
+// .grid {
+//     margin: var(--gap);
+// }
+// .project-description {
+//     padding: 0.5rem;
+//     border: solid 1px gray;
+// }
