--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -31,38 +31,40 @@ var allProjects = await Astro.glob('../../work/projects/*/*.md')
   {
     projects.map((category, i) => {
       return (
-        <h3 class="category__title">{category.name}</h3>
-        <SiteGridContent classItems="wrap">
-          {
-            category.items.map((item, i2) => {
-              var target = '_blank'
-              var url = item.frontmatter.url
-              if (url.startsWith('//')) url = `https:${url}`
+        <section class="category">
+          <h3 class="category__title">{category.name}</h3>
+          <SiteGridContent classItems="wrap">
+            {
+              category.items.map((item, i2) => {
+                var target = '_blank'
+                var url = item.frontmatter.url
+                if (url.startsWith('//')) url = `https:${url}`
 
-              var domain = url
-              if (domain.includes('://')) {
-                domain = domain.split('://')[1]
-                if (domain.includes('/')) domain = domain.split('/')[0]
-                if (domain.startsWith('www.')) domain = domain.slice('www.'.length)
-                domain = `https://${domain}`
-              }
-              
-              if (!url.includes(':') || domain === Astro.site) target = 'self'
+                var domain = url
+                if (domain.includes('://')) {
+                  domain = domain.split('://')[1]
+                  if (domain.includes('/')) domain = domain.split('/')[0]
+                  if (domain.startsWith('www.')) domain = domain.slice('www.'.length)
+                  domain = `https://${domain}`
+                }
+                
+                if (!url.includes(':') || domain === Astro.site) target = 'self'
 
-              var imageSize = 512
-              var image_url = `https://webshot.adarshrkumar.dev/take?url=${encodeURIComponent(url)}&viewport_width=${imageSize}&viewport_height=${imageSize}`
-              return (
-                <a href={url} target={target} class="item">
-                  <img src={image_url} alt class="item__img" style={`--placeholder: url('${image_url}&image_quality=${50}')`} />
-                  <div class="item__info">
-                    <h3 class="item__title">{item.frontmatter.name}</h3>
-                    <p class="item__content">{item.rawContent()}</p>
-                  </div>
-                </a>
-              )
-            })
-          }
-        </SiteGridContent>
+                var imageSize = 512
+                var image_url = `https://webshot.adarshrkumar.dev/take?url=${encodeURIComponent(url)}&viewport_width=${imageSize}&viewport_height=${imageSize}`
+                return (
+                  <a href={url} target={target} class="item">
+                    <img src={image_url} alt class="item__img" style={`--placeholder: url('${image_url}&image_quality=${50}')`} />
+                    <div class="item__info">
+                      <h3 class="item__title">{item.frontmatter.name}</h3>
+                      <p class="item__content">{item.rawContent()}</p>
+                    </div>
+                  </a>
+                )
+              })
+            }
+          </SiteGridContent>
+        </section>
         <div class="divider h" style="--s: 1000px;"></div>
       )
     })
